Fixed error when calculate max in Cumulative relative

--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -80,6 +80,7 @@ error.nocacheavaible    = Sense mem\u00F2ria cau es troba per a aquest usuari i 
 error.nocourse          = Heu de seleccionar un curs.
 error.saveallcharts     = No es poden exportar gr\u00E0fics.
 error.savechart         = Error en desar el diagrama.
+error.saveconfiguration = Cannot save the configuration file.
 error.savecsvfiles      = No s'han pogut exportar les dades en format CSV.
 error.updateofflinemode = El curs no es pot actualitzar en mode fora de l\u00EDnia. Si us plau, sortir i entrar de nou en la manera en l\u00EDnia.
 error.userdata          = Error en recuperar les dades de l'usuari.
