--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -80,6 +80,7 @@ error.nocacheavaible    = Kein Cache f\u00FCr diesen Benutzer und Host gefunden
 error.nocourse          = Sie m\u00FCssen einen Kurs ausw\u00E4hlen.
 error.saveallcharts     = Diagramme k\u00F6nnen nicht exportiert werden.
 error.savechart         = Fehler beim Speichern des Diagramms.
+error.saveconfiguration = Cannot save the configuration file.
 error.savecsvfiles      = Die Daten konnten nicht im CSV-Format exportiert werden.
 error.updateofflinemode = Der Kurs kann nicht im Offline-Modus aktualisiert werden. Bitte melden Sie sich ab und melden Sie sich im Online-Modus zur\u00FCck.
 error.userdata          = Fehler beim Wiederherstellen der Benutzerdaten.
