--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -80,6 +80,7 @@ error.nocacheavaible    = No cache is found for this user and host
 error.nocourse          = You have to select a course.
 error.saveallcharts     = Can't export charts.
 error.savechart         = Error saving chart.
+error.saveconfiguration = Cannot save the configuration file.
 error.savecsvfiles      = The data could not be exported in CSV format.
 error.updateofflinemode = The course cannot be updated in offline mode. Please log out and log back in online mode.
 error.userdata          = Error when recovering user data.
