--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -80,6 +80,7 @@ error.nocacheavaible    = No se encunetra cach\u00E9 para este usuario y host
 error.nocourse          = Debe seleccionar un curso.
 error.saveallcharts     = No se han podido exportar los gr\u00E1ficos.
 error.savechart         = Error al gruardar el gr\u00E1fico.
+error.saveconfiguration = No se ha podido guardar el fichero de configuraci\u00F3n.
 error.savecsvfiles      = No se han podido exportar los datos en formato CSV.
 error.updateofflinemode = No se puede actualizar el curso en modo offline. Por favor, cierre sesi\u00F3n y vuelva a iniciar sesi\u00F3n en modo online
 error.userdata          = Error al recuperar los datos del usuario.
