--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -80,6 +80,7 @@ error.nocacheavaible    = Aucun cache est trouv\u00E9 pour cet utilisateur et l'
 error.nocourse          = Vous devez choisir un cours.
 error.saveallcharts     = Impossible d'exporter des graphiques.
 error.savechart         = Erreur d'enregistrement du graphique.
+error.saveconfiguration = Cannot save the configuration file.
 error.savecsvfiles      = Les donn\u00E9es n'ont pas pu \u00EAtre export\u00E9es au format CSV.
 error.updateofflinemode = Le cours ne peut pas \u00EAtre mis \u00E0 jour en mode hors ligne. S'il vous pla\u00EEt vous d\u00E9connecter et vous reconnecter en mode en ligne.
 error.userdata          = Erreur lors de la r\u00E9cup\u00E9ration des donn\u00E9es utilisateur.
