--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -80,6 +80,7 @@ error.nocacheavaible    = Nessun cache \u00E8 trovato per questo utente e di acc
 error.nocourse          = Devi selezionare un corso.
 error.saveallcharts     = Impossibile esportare i grafici.
 error.savechart         = Errore durante il salvataggio del grafico.
+error.saveconfiguration = Cannot save the configuration file.
 error.savecsvfiles      = I dati non possono essere esportati in formato CSV.
 error.updateofflinemode = Il corso non pu\u00F2 essere aggiornato in modalit\u00E0 offline. Si prega di disconnettersi e riconnettersi in modalit\u00E0 online.
 error.userdata          = Errore durante il recupero dei dati dell'utente.
