--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -80,6 +80,7 @@ error.nocacheavaible    = Sem cache \u00E9 encontrado para este usu\u00E1rio e h
 error.nocourse          = Voc\u00EA tem que selecionar um curso.
 error.saveallcharts     = N\u00E3o \u00E9 poss\u00EDvel exportar gr\u00E1ficos.
 error.savechart         = Erro ao salvar gr\u00E1fico.
+error.saveconfiguration = Cannot save the configuration file.
 error.savecsvfiles      = Os dados n\u00E3o puderam ser exportados no formato CSV.
 error.updateofflinemode = O curso n\u00E3o pode ser atualizado no modo offline. Por favor, saia e entre novamente no modo online.
 error.userdata          = Erro ao recuperar dados do usu\u00E1rio.
