Added online/offline label and logout button

--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -39,6 +39,8 @@ btnLegend = Llegenda
 
 btnMean = General Stats
 
+button.logout = Tancar sessi\u00F3
+
 chart.mean                = Significar
 
 chartlabel.atypicalValue  = Valor at\u00EDpic
@@ -647,6 +649,8 @@ text.seconds            = Segons
 text.sectionplaceholder = Portada
 text.selectedUsers      = Selected Users
 text.stats              = Estad\u00EDstiques
+text.withconnection     = Mode: Online
+text.withoutconnection  = Mode: Offline
 
 title.passwordChanged   = S'ha canviat la contrasenya
 title.passwordIncorrect = Contrasenya incorrecta
