--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -39,6 +39,8 @@ btnLegend = Legende
 
 btnMean = General Stats
 
+button.logout = Ausloggen
+
 chart.mean                = Bedeuten
 
 chartlabel.atypicalValue  = Atypischer Wert
@@ -647,6 +649,8 @@ text.seconds            = Sekunden
 text.sectionplaceholder = Titelseite
 text.selectedUsers      = Selected Users
 text.stats              = Kursstatistiken
+text.withconnection     = Mode: Online
+text.withoutconnection  = Mode: Offline
 
 title.passwordChanged   = Passwort wurde ge\u00E4ndert
 title.passwordIncorrect = Falsches Passwort
