--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -39,6 +39,8 @@ btnLegend = Leyenda
 
 btnMean = Estad\u00EDsticas generales
 
+button.logout = Cerrar sesi\u00F3n
+
 chart.mean                = Media
 
 chartlabel.atypicalValue  = Valor Atipico
@@ -647,6 +649,8 @@ text.seconds            = segundos
 text.sectionplaceholder = P\u00E1gina principal
 text.selectedUsers      = Usuarios Seleccionados
 text.stats              = Estad\u00EDsticas
+text.withconnection     = Modo: Online
+text.withoutconnection  = Modo: Offline
 
 title.passwordChanged   = Contrase\u00F1a modificada
 title.passwordIncorrect = Contrase\u00F1a incorrecta
