--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -39,6 +39,8 @@ btnLegend = L\u00E9gende
 
 btnMean = General Stats
 
+button.logout = Connectez - Out
+
 chart.mean                = Signifier
 
 chartlabel.atypicalValue  = Valeur atypique
@@ -647,6 +649,8 @@ text.seconds            = Secondes
 text.sectionplaceholder = Page de garde
 text.selectedUsers      = Selected Users
 text.stats              = Statistiques
+text.withconnection     = Mode: Online
+text.withoutconnection  = Mode: Offline
 
 title.passwordChanged   = Le mot de passe a \u00E9t\u00E9 chang\u00E9
 title.passwordIncorrect = Mot de passe incorrect
