--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -39,6 +39,8 @@ btnLegend = Leggenda
 
 btnMean = General Stats
 
+button.logout = Disconnettersi
+
 chart.mean                = Significare
 
 chartlabel.atypicalValue  = Valore atipico
@@ -647,6 +649,8 @@ text.seconds            = secondi
 text.sectionplaceholder = Prima pagina
 text.selectedUsers      = Selected Users
 text.stats              = Statistiche
+text.withconnection     = Mode: Online
+text.withoutconnection  = Mode: Offline
 
 title.passwordChanged   = La password \u00E8 stata cambiata
 title.passwordIncorrect = Password non corretta
