--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -39,6 +39,8 @@ btnLegend = Lenda
 
 btnMean = General Stats
 
+button.logout = Sair
+
 chart.mean                = Significar
 
 chartlabel.atypicalValue  = Valor at\u00EDpico
@@ -647,6 +649,8 @@ text.seconds            = Segundos
 text.sectionplaceholder = Primeira p\u00E1gina
 text.selectedUsers      = Selected Users
 text.stats              = Estat\u00EDsticas
+text.withconnection     = Mode: Online
+text.withoutconnection  = Mode: Offline
 
 title.passwordChanged   = Senha foi alterada
 title.passwordIncorrect = Senha incorreta
