--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -39,6 +39,8 @@ btnLegend = Legend
 
 btnMean = General Stats
 
+button.logout = Logout
+
 chart.mean                = Mean
 
 chartlabel.atypicalValue  = Atypical Value
@@ -647,6 +649,8 @@ text.seconds            = Seconds
 text.sectionplaceholder = Front page
 text.selectedUsers      = Selected Users
 text.stats              = Statistics
+text.withconnection     = Mode: Online
+text.withoutconnection  = Mode: Offline
 
 title.passwordChanged   = Password was changed
 title.passwordIncorrect = Password incorrect
