Added button to restaure default values in configuration

--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -39,7 +39,10 @@ btnLegend = Llegenda
 
 btnMean = General Stats
 
-button.logout = Tancar sessi\u00F3
+button.apply   = Apply
+button.logout  = Tancar sessi\u00F3
+button.restore = Restore Defaults
+button.save    = Save
 
 chart.mean                = Significar
 
