--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -39,7 +39,10 @@ btnLegend = Legende
 
 btnMean = General Stats
 
-button.logout = Ausloggen
+button.apply   = Apply
+button.logout  = Ausloggen
+button.restore = Restore Defaults
+button.save    = Save
 
 chart.mean                = Bedeuten
 
