--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -39,7 +39,10 @@ btnLegend = Legend
 
 btnMean = General Stats
 
-button.logout = Logout
+button.apply   = Apply
+button.logout  = Logout
+button.restore = Restore Defaults
+button.save    = Save
 
 chart.mean                = Mean
 
