--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -39,7 +39,10 @@ btnLegend = Leyenda
 
 btnMean = Estad\u00EDsticas generales
 
-button.logout = Cerrar sesi\u00F3n
+button.apply   = Aplicar
+button.logout  = Cerrar sesi\u00F3n
+button.restore = Restaurar valores por defecto
+button.save    = Guardar
 
 chart.mean                = Media
 
