--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -39,7 +39,10 @@ btnLegend = L\u00E9gende
 
 btnMean = General Stats
 
-button.logout = Connectez - Out
+button.apply   = Apply
+button.logout  = Connectez - Out
+button.restore = Restore Defaults
+button.save    = Save
 
 chart.mean                = Signifier
 
