--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -39,7 +39,10 @@ btnLegend = Leggenda
 
 btnMean = General Stats
 
-button.logout = Disconnettersi
+button.apply   = Apply
+button.logout  = Disconnettersi
+button.restore = Restore Defaults
+button.save    = Save
 
 chart.mean                = Significare
 
