--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -39,7 +39,10 @@ btnLegend = Lenda
 
 btnMean = General Stats
 
-button.logout = Sair
+button.apply   = Apply
+button.logout  = Sair
+button.restore = Restore Defaults
+button.save    = Save
 
 chart.mean                = Significar
 
