Added import/export configuration files

--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -584,9 +584,11 @@ menu.changesubject  = Das Thema wechseln
 menu.clearselection = Auswahl aufheben
 menu.edit           = Bearbeiten
 menu.exit           = Ausgang
+menu.exportconfig   = Export Configuration
 menu.exportcsv      = CSV-Daten exportieren
 menu.file           = Datei
 menu.help           = Hilfe
+menu.importconfig   = Import Configuration
 menu.logout         = Ausloggen
 menu.saveall        = Alles speichern unter ..
 menu.savechart      = Grafik speichern unter ...
