--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -584,9 +584,11 @@ menu.changesubject  = Change Subject
 menu.clearselection = Clear selection
 menu.edit           = Edit
 menu.exit           = Exit
+menu.exportconfig   = Export Configuration
 menu.exportcsv      = Export CSV data
 menu.file           = File
 menu.help           = Help
+menu.importconfig   = Import Configuration
 menu.logout         = Logout
 menu.saveall        = Save all as...
 menu.savechart      = Save chart as...
