--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -584,9 +584,11 @@ menu.changesubject  = Cambiar Asignatura
 menu.clearselection = Borrar selecci\u00F3n
 menu.edit           = Editar
 menu.exit           = Salir
+menu.exportconfig   = Exportar Configuraci\u00F3n
 menu.exportcsv      = Exportar datos CSV
 menu.file           = Archivo
 menu.help           = Ayuda
+menu.importconfig   = Importar Configuraci\u00F3n
 menu.logout         = Cerrar sesi\u00F3n
 menu.saveall        = Guardar todo como...
 menu.savechart      = Guardar gr\u00E1fico como...
