--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -584,9 +584,11 @@ menu.changesubject  = Cambia materia
 menu.clearselection = Cancella selezione
 menu.edit           = modificare
 menu.exit           = Uscita
+menu.exportconfig   = Export Configuration
 menu.exportcsv      = Esporta dati CSV
 menu.file           = File
 menu.help           = Aiuto
+menu.importconfig   = Import Configuration
 menu.logout         = Disconnettersi
 menu.saveall        = Salva tutto come ...
 menu.savechart      = Salva grafico come ...
