--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -584,9 +584,11 @@ menu.changesubject  = Canvia el tema
 menu.clearselection = Neteja la selecci\u00F3
 menu.edit           = Edita
 menu.exit           = Sortir
+menu.exportconfig   = Export Configuration
 menu.exportcsv      = Exportar CSV
 menu.file           = Dossier
 menu.help           = Ajuda
+menu.importconfig   = Import Configuration
 menu.logout         = Tancar sessi\u00F3
 menu.saveall        = Desa-ho tot com a ...
 menu.savechart      = Desa el gr\u00E0fic com ...
