Change to gridpane user list configuration

--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -116,7 +116,7 @@ label.loggedin                    = Logged in:
 label.never                       = Nicht verf\u00FCgbar
 label.of                          = von
 label.oldPassword                 = Altes Passwort:
-label.participants                = Teilnehmer:
+label.participants                = Teilnehmer
 label.pass                        = Passwort:
 label.rol                         = Rol:
 label.savelocal                   = Speichern in lokaler ...
