--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -94,7 +94,7 @@ header.passwordChangedMessage   = Detected was password changed
 header.passwordDateTime         = Previous date password: 
 header.passwordIncorrectMessage = Password incorrect
 
-label.activity                    = Last connection:
+label.activity                    = Last connect.:
 label.categoryitem                = Category/Item:
 label.close                       = Close
 label.component                   = Component: 
@@ -116,7 +116,7 @@ label.loggedin                    = Logged in:
 label.never                       = Not available
 label.of                          = of
 label.oldPassword                 = Old Password: 
-label.participants                = Participants: 
+label.participants                = Participants
 label.pass                        = Password:
 label.rol                         = Rol:
 label.savelocal                   = Saving in local...
