--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -94,7 +94,7 @@ header.passwordChangedMessage   = Se ha detectado que se ha cambiado la contrase
 header.passwordDateTime         = Fecha de la contrase\u00F1a antigua: 
 header.passwordIncorrectMessage = Contrase\u00F1a incorrecta
 
-label.activity                    = \u00DAltima conexi\u00F3n:
+label.activity                    = \u00DAlt. conex.:
 label.categoryitem                = Categor\u00EDa/Item:
 label.close                       = Cerrar
 label.component                   = Componente: 
@@ -116,7 +116,7 @@ label.loggedin                    = Inicio sesi\u00F3n:
 label.never                       = No disponible
 label.of                          = de
 label.oldPassword                 = Contrase\u00F1a antigua: 
-label.participants                = Participantes: 
+label.participants                = Participantes
 label.pass                        = Contrase\u00F1a:
 label.rol                         = Rol:
 label.savelocal                   = Guardando en local...
