--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -116,7 +116,7 @@ label.loggedin                    = Logged in:
 label.never                       = Indisponible
 label.of                          = de
 label.oldPassword                 = Ancien mot de passe:
-label.participants                = Participants:
+label.participants                = Participants
 label.pass                        = Mot de passe:
 label.rol                         = Rol:
 label.savelocal                   = \u00C9conomiser en local ...
