--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -116,7 +116,7 @@ label.loggedin                    = Logged in:
 label.never                       = Non disponibile
 label.of                          = di
 label.oldPassword                 = Vecchia password:
-label.participants                = partecipanti:
+label.participants                = partecipanti
 label.pass                        = La password:
 label.rol                         = Rol:
 label.savelocal                   = Salvataggio in locale ...
