--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -116,7 +116,7 @@ label.loggedin                    = Logged in:
 label.never                       = N\u00E3o dispon\u00EDvel
 label.of                          = do
 label.oldPassword                 = Senha Antiga:
-label.participants                = Participantes:
+label.participants                = Participantes
 label.pass                        = Senha:
 label.rol                         = Rol:
 label.savelocal                   = Salvando em locais ...
