--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -116,7 +116,7 @@ label.loggedin                    = Logged in:
 label.never                       = No disponible
 label.of                          = de
 label.oldPassword                 = Contrasenya antiga:
-label.participants                = Participants:
+label.participants                = Participants
 label.pass                        = Contrasenya:
 label.rol                         = Rol:
 label.savelocal                   = S'est\u00E0 desant en local ...
