--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -69,7 +69,7 @@ choiceBox.ALL          = Todos
 choiceBox.AM_PM        = AM/PM
 choiceBox.DAY          = D\u00EDas
 choiceBox.DAY_OF_WEEK  = D\u00EDas de la semana
-choiceBox.HOUR         = Horas
+choiceBox.HOUR         = Horas del d\u00EDa
 choiceBox.YEAR         = A\u00F1os
 choiceBox.YEAR_MONTH   = Meses
 choiceBox.YEAR_QUARTER = Trimestres
@@ -584,7 +584,7 @@ menu.changesubject  = Cambiar Asignatura
 menu.clearselection = Borrar selecci\u00F3n
 menu.edit           = Editar
 menu.exit           = Salir
-menu.exportconfig   = Exportar Configuraci\u00F3n
+menu.exportconfig   = Exportar configuraci\u00F3n
 menu.exportcsv      = Exportar datos CSV
 menu.file           = Archivo
 menu.help           = Ayuda
