--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -69,7 +69,7 @@ choiceBox.ALL          = Tout
 choiceBox.AM_PM        = MATIN APR\u00C8S-MIDI
 choiceBox.DAY          = Journ\u00E9es
 choiceBox.DAY_OF_WEEK  = Jours de la semaine
-choiceBox.HOUR         = Heures
+choiceBox.HOUR         = Heures du jour
 choiceBox.YEAR         = Ann\u00E9es
 choiceBox.YEAR_MONTH   = Mois
 choiceBox.YEAR_QUARTER = Trimestres
@@ -584,7 +584,7 @@ menu.changesubject  = Change le sujet
 menu.clearselection = Effacer la s\u00E9lection
 menu.edit           = modifier
 menu.exit           = Sortie
-menu.exportconfig   = Export Configuration
+menu.exportconfig   = Export configuration
 menu.exportcsv      = Exporter des donn\u00E9es CSV
 menu.file           = Fichier
 menu.help           = Aidez-moi
