--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -69,7 +69,7 @@ choiceBox.ALL          = Tutti
 choiceBox.AM_PM        = AM PM
 choiceBox.DAY          = giorni
 choiceBox.DAY_OF_WEEK  = Giorni della settimana
-choiceBox.HOUR         = Ore
+choiceBox.HOUR         = Ore del giorno
 choiceBox.YEAR         = Anni
 choiceBox.YEAR_MONTH   = mesi
 choiceBox.YEAR_QUARTER = alloggio
@@ -584,7 +584,7 @@ menu.changesubject  = Cambia materia
 menu.clearselection = Cancella selezione
 menu.edit           = modificare
 menu.exit           = Uscita
-menu.exportconfig   = Export Configuration
+menu.exportconfig   = Export configuration
 menu.exportcsv      = Esporta dati CSV
 menu.file           = File
 menu.help           = Aiuto
