--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -69,7 +69,7 @@ choiceBox.ALL          = Todos
 choiceBox.AM_PM        = MANH\u00C3 TARDE
 choiceBox.DAY          = Dias
 choiceBox.DAY_OF_WEEK  = Dias da semana
-choiceBox.HOUR         = Horas
+choiceBox.HOUR         = Horas do dia
 choiceBox.YEAR         = Anos
 choiceBox.YEAR_MONTH   = Meses
 choiceBox.YEAR_QUARTER = Quartos
@@ -584,7 +584,7 @@ menu.changesubject  = Mudar de assunto
 menu.clearselection = Sele\u00E7\u00E3o clara
 menu.edit           = Editar
 menu.exit           = Sa\u00EDda
-menu.exportconfig   = Export Configuration
+menu.exportconfig   = Export configuration
 menu.exportcsv      = Exportar dados CSV
 menu.file           = Arquivo
 menu.help           = Socorro
