--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -69,7 +69,7 @@ choiceBox.ALL          = Tots
 choiceBox.AM_PM        = AM PM
 choiceBox.DAY          = Dies
 choiceBox.DAY_OF_WEEK  = Dies de la setmana
-choiceBox.HOUR         = Hores
+choiceBox.HOUR         = Les hores del dia
 choiceBox.YEAR         = Anys
 choiceBox.YEAR_MONTH   = Mesos
 choiceBox.YEAR_QUARTER = Trimestres
@@ -584,7 +584,7 @@ menu.changesubject  = Canvia el tema
 menu.clearselection = Neteja la selecci\u00F3
 menu.edit           = Edita
 menu.exit           = Sortir
-menu.exportconfig   = Export Configuration
+menu.exportconfig   = Export configuration
 menu.exportcsv      = Exportar CSV
 menu.file           = Dossier
 menu.help           = Ajuda
