--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -69,7 +69,7 @@ choiceBox.ALL          = Alles
 choiceBox.AM_PM        = AM / PM
 choiceBox.DAY          = Tage
 choiceBox.DAY_OF_WEEK  = Wochentage
-choiceBox.HOUR         = Std
+choiceBox.HOUR         = Stunden des Tages
 choiceBox.YEAR         = Jahre
 choiceBox.YEAR_MONTH   = Monate
 choiceBox.YEAR_QUARTER = Viertel
@@ -584,7 +584,7 @@ menu.changesubject  = Das Thema wechseln
 menu.clearselection = Auswahl aufheben
 menu.edit           = Bearbeiten
 menu.exit           = Ausgang
-menu.exportconfig   = Export Configuration
+menu.exportconfig   = Export configuration
 menu.exportcsv      = CSV-Daten exportieren
 menu.file           = Datei
 menu.help           = Hilfe
