--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -69,7 +69,7 @@ choiceBox.ALL          = All
 choiceBox.AM_PM        = AM/PM
 choiceBox.DAY          = Days
 choiceBox.DAY_OF_WEEK  = Days of week
-choiceBox.HOUR         = Hours
+choiceBox.HOUR         = Hours of the day
 choiceBox.YEAR         = Years
 choiceBox.YEAR_MONTH   = Months
 choiceBox.YEAR_QUARTER = Quarters
@@ -584,7 +584,7 @@ menu.changesubject  = Change Subject
 menu.clearselection = Clear selection
 menu.edit           = Edit
 menu.exit           = Exit
-menu.exportconfig   = Export Configuration
+menu.exportconfig   = Export configuration
 menu.exportcsv      = Export CSV data
 menu.file           = File
 menu.help           = Help
