--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -584,11 +584,11 @@ menu.changesubject  = Das Thema wechseln
 menu.clearselection = Auswahl aufheben
 menu.edit           = Bearbeiten
 menu.exit           = Ausgang
-menu.exportconfig   = Export configuration
-menu.exportcsv      = CSV-Daten exportieren
+menu.exportconfig   = Export configuration...
+menu.exportcsv      = CSV-Daten exportieren...
 menu.file           = Datei
 menu.help           = Hilfe
-menu.importconfig   = Import Configuration
+menu.importconfig   = Import configuration...
 menu.logout         = Ausloggen
 menu.saveall        = Alles speichern unter ..
 menu.savechart      = Grafik speichern unter ...
