--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -584,11 +584,11 @@ menu.changesubject  = Change le sujet
 menu.clearselection = Effacer la s\u00E9lection
 menu.edit           = modifier
 menu.exit           = Sortie
-menu.exportconfig   = Export configuration
-menu.exportcsv      = Exporter des donn\u00E9es CSV
+menu.exportconfig   = Export configuration...
+menu.exportcsv      = Exporter des donn\u00E9es CSV...
 menu.file           = Fichier
 menu.help           = Aidez-moi
-menu.importconfig   = Import Configuration
+menu.importconfig   = Import configuration...
 menu.logout         = Connectez - Out
 menu.saveall        = Enregistrer tout sous ...
 menu.savechart      = Enregistrer le graphique sous ...
