--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -584,11 +584,11 @@ menu.changesubject  = Cambia materia
 menu.clearselection = Cancella selezione
 menu.edit           = modificare
 menu.exit           = Uscita
-menu.exportconfig   = Export configuration
-menu.exportcsv      = Esporta dati CSV
+menu.exportconfig   = Export configuration...
+menu.exportcsv      = Esporta dati CSV...
 menu.file           = File
 menu.help           = Aiuto
-menu.importconfig   = Import Configuration
+menu.importconfig   = Import configuration...
 menu.logout         = Disconnettersi
 menu.saveall        = Salva tutto come ...
 menu.savechart      = Salva grafico come ...
