--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -584,11 +584,11 @@ menu.changesubject  = Mudar de assunto
 menu.clearselection = Sele\u00E7\u00E3o clara
 menu.edit           = Editar
 menu.exit           = Sa\u00EDda
-menu.exportconfig   = Export configuration
-menu.exportcsv      = Exportar dados CSV
+menu.exportconfig   = Export configuration...
+menu.exportcsv      = Exportar dados CSV...
 menu.file           = Arquivo
 menu.help           = Socorro
-menu.importconfig   = Import Configuration
+menu.importconfig   = Import configuration...
 menu.logout         = Sair
 menu.saveall        = Salvar tudo como ...
 menu.savechart      = Salvar gr\u00E1fico como ...
